--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,4 @@
-javax.validation.constraints.Size.message = Size should be greater than {min} 
-javax.validation.constraints.NotBlank.message = Cannot be blank
-javax.validation.constraints.Email.message = Misspelled email according to the rules
-javax.validation.constraints.NotEmpty.message = Email can't be empty
+javax.validation.constraints.Size.message =   Should be greater than {min} 
+javax.validation.constraints.NotBlank.message =   Cannot be blank
+javax.validation.constraints.Email.message =    Misspelled email according to the rules
+javax.validation.constraints.NotEmpty.message =   Email can't be empty
